--- a/views/projects/labels/_form.html.haml
+++ b/views/projects/labels/_form.html.haml
@@ -12,15 +12,15 @@
     .col-sm-10
       = f.text_field :title, class: "form-control", required: true
   .form-group
-    = f.label :color, "Background Color", class: 'control-label'
+    = f.label :color, "Цвет фона", class: 'control-label'
     .col-sm-10
       .input-group
         .input-group-addon.label-color-preview &nbsp;
         = f.color_field :color, placeholder: "#AA33EE", class: "form-control"
       .help-block
-        6 character hex values starting with a # sign.
+        6 знаков шестнадцатеричного значения, начинающиеся с знака #.
         %br
-        Or you can choose one of suggested colors below
+        Или вы можете выбрать один из предложенных цветов ниже
 
       .suggest-colors
         - suggested_colors.each do |color|
@@ -28,6 +28,6 @@
             &nbsp;
 
   .form-actions
-    = f.submit 'Save', class: 'btn btn-save js-save-button'
-    = link_to "Cancel", namespace_project_labels_path(@project.namespace, @project), class: 'btn btn-cancel'
+    = f.submit 'Сохранить', class: 'btn btn-save js-save-button'
+    = link_to "Отмена", namespace_project_labels_path(@project.namespace, @project), class: 'btn btn-cancel'
 
