--- a/views/projects/labels/edit.html.haml
+++ b/views/projects/labels/edit.html.haml
@@ -1,8 +1,8 @@
 %h3
-  Edit label
+  Правка метки
   %span.light #{@label.name}
 .back-link
   = link_to namespace_project_labels_path(@project.namespace, @project) do
-    &larr; To labels list
+    &larr; К списку меток
 %hr
 = render 'form'
