--- a/views/projects/labels/index.html.haml
+++ b/views/projects/labels/index.html.haml
@@ -1,8 +1,8 @@
 - if can? current_user, :admin_label, @project
   = link_to new_namespace_project_label_path(@project.namespace, @project), class: "pull-right btn btn-new" do
-    New label
+    Новая метка
 %h3.page-title
-  Labels
+  Метки
 %hr
 
 .labels
@@ -12,4 +12,4 @@
     = paginate @labels, theme: 'gitlab'
   - else
     .light-well
-      .nothing-here-block Create first label or #{link_to 'generate', generate_namespace_project_labels_path(@project.namespace, @project), method: :post} default set of labels
+      .nothing-here-block Создайте первую метку или #{link_to 'сгенерируйте', generate_namespace_project_labels_path(@project.namespace, @project), method: :post} метки по умолчанию
