--- a/views/projects/labels/new.html.haml
+++ b/views/projects/labels/new.html.haml
@@ -1,6 +1,6 @@
-%h3 New label
+%h3 Новая метка
 .back-link
   = link_to namespace_project_labels_path(@project.namespace, @project) do
-    &larr; To labels list
+    &larr; К списку меток
 %hr
 = render 'form'
