--- a/views/projects/commit/builds.html.haml
+++ b/views/projects/commit/builds.html.haml
@@ -1,4 +1,4 @@
-- page_title "Builds", "#{@commit.title} (#{@commit.short_id})", "Commits"
+- page_title "Билд", "#{@commit.title} (#{@commit.short_id})", "Коммиты"
 = render "projects/commits/header_title"
 .prepend-top-default
   = render "commit_box"
