--- a/views/projects/commit/show.html.haml
+++ b/views/projects/commit/show.html.haml
@@ -1,4 +1,4 @@
-- page_title        "#{@commit.title} (#{@commit.short_id})", "Commits"
+- page_title        "#{@commit.title} (#{@commit.short_id})", "Коммиты"
 - page_description  @commit.description
 
 = render "projects/commits/header_title"
