--- a/views/devise/shared/_sign_in_link.html.haml
+++ b/views/devise/shared/_sign_in_link.html.haml
@@ -1,5 +1,5 @@
 %p
   %span.light
-    Already have login and password?
+    Уже есть логин и пароль?
   %strong
-    = link_to "Sign in", new_session_path(resource_name)
+    = link_to "Вход", new_session_path(resource_name)
