--- a/views/admin/appearances/_form.html.haml
+++ b/views/admin/appearances/_form.html.haml
@@ -6,7 +6,7 @@
 
   %fieldset.sign-in
     %legend
-      Sign in/Sign up pages:
+      Страница входа/регистрации:
   .form-group
     = f.label :title, class: 'control-label'
     .col-sm-10
@@ -16,7 +16,7 @@
     .col-sm-10
       = f.text_area :description, class: "form-control", rows: 10
       .hint
-        Description parsed with #{link_to "GitLab Flavored Markdown", help_page_path('markdown', 'markdown'), target: '_blank'}.
+        Доступен облегчённый #{link_to "язык разметки Markdown", help_page_path('markdown', 'markdown'), target: '_blank'}.
   .form-group
     = f.label :logo, class: 'control-label'
     .col-sm-10
@@ -24,35 +24,35 @@
         = image_tag @appearance.logo_url, class: 'appearance-logo-preview'
         - if @appearance.persisted?
           %br
-          = link_to 'Remove logo', logo_admin_appearances_path, data: { confirm: "Logo will be removed. Are you sure?"}, method: :delete, class: "btn btn-remove btn-small remove-logo"
+          = link_to 'Удалить логотип', logo_admin_appearances_path, data: { confirm: "Логотип будет удален. Вы уверены?"}, method: :delete, class: "btn btn-remove btn-small remove-logo"
         %hr
       = f.hidden_field :logo_cache
       = f.file_field :logo, class: ""
       .hint
-        Maximum file size is 1MB. Pages are optimized for a 640x360 px logo.
+        Максимальный размер файла 1Мб. Страницы оптимизированы для логотипа 640х360 пикселей.
 
   %fieldset.app_logo
     %legend
-      Navigation bar:
+      Панель навигации:
   .form-group
-    = f.label :header_logo, 'Header logo', class: 'control-label'
+    = f.label :header_logo, 'Логотип шапки', class: 'control-label'
     .col-sm-10
       - if @appearance.header_logo?
         = image_tag @appearance.header_logo_url, class: 'appearance-light-logo-preview'
         - if @appearance.persisted?
           %br
-          = link_to 'Remove header logo', header_logos_admin_appearances_path, data: { confirm: "Header logo will be removed. Are you sure?"}, method: :delete, class: "btn btn-remove btn-small remove-logo"
+          = link_to 'Удалить логотип шапки', header_logos_admin_appearances_path, data: { confirm: "Логотип шапки будет удален. Вы уверены?"}, method: :delete, class: "btn btn-remove btn-small remove-logo"
         %hr
       = f.hidden_field :header_logo_cache
       = f.file_field :header_logo, class: ""
       .hint
-        Maximum file size is 1MB. Pages are optimized for a 72x72 px header logo
+        Страницы оптимизированы для логотипа шапки сайта 72x72 пикселей.
 
   .form-actions
-    = f.submit 'Save', class: 'btn btn-save'
+    = f.submit 'Сохранить', class: 'btn btn-save'
     - if @appearance.persisted?
-      = link_to 'Preview last save', preview_admin_appearances_path, class: 'btn', target: '_blank'
+      = link_to 'Показать последнее сохранение', preview_admin_appearances_path, class: 'btn', target: '_blank'
 
     - if @appearance.updated_at
       %span.pull-right
-        Last edit #{time_ago_with_tooltip(@appearance.updated_at)}
+        Последняя правка #{time_ago_with_tooltip(@appearance.updated_at)}
