--- a/views/admin/appearances/show.html.haml
+++ b/views/admin/appearances/show.html.haml
@@ -1,7 +1,7 @@
-- page_title "Appearance"
+- page_title "Внешний вид"
 %h3.page-title
-  Appearance settings
+  Настройка внешнего вида
 %p.light
-  You can modify the look and feel of GitLab here
+  Здесь вы можете изменить внешний вид GitLab
 
 = render 'form'
